# MiniNeuron

./: .gitignore  CMakeLists.txt  LICENSE  MiniNeuron.sln  README.md
MiniNeuron/: MiniNeuron.vcxproj  MiniNeuron.vcxproj.filters
MiniNeuron/includes/: Layer.h  Matrix.h  activation_types.h  initializers.h  loss_types.h  network.h  optimizer_types.h
MiniNeuron/src/: Layer.cpp  initializers.cpp  network.cpp
demos/mnist/: mnist-test.vcxproj
demos/mnist/src/: main.cpp
demos/xor-demo/: xor-demo.vcxproj
demos/xor-demo/src/: main.cpp
mnist-test/: mnist-test.vcxproj
mnist-test/src/: main.cpp
